@@ -1,5 +1,5 @@
 /* Writing Java ResourceBundles.
-   Copyright (C) 2001-2003 Free Software Foundation, Inc.
+   Copyright (C) 2001-2003, 2005 Free Software Foundation, Inc.
    Written by Bruno Haible <haible@clisp.cons.org>, 2001.
 
    This program is free software; you can redistribute it and/or modify
@@ -1085,7 +1085,6 @@ msgdomain_write_java (message_list_ty *mlp, const char *canon_encoding,
       fclose (java_file);
       goto quit5;
     }
-  fclose (java_file);
 
   /* Compile the Java file to a .class file.
      directory must be non-NULL, because when the -d option is omitted, the
